# ghostlua

./: .assetsignore  .dev.vars.example  .env.example  .gitignore  DEPLOYMENT_FIX.md  DEPLOY_TO_GITHUB.md  README.md  SECURITY.md  add_final_games.mjs  add_more_games.mjs  admin.html  build_games.mjs  community.html  deploy.bat  deploy.sh  guide.html  index.html  package.json  pricing.html  privacy.html  profile.html  server.js  status.html  tos.html  worker.js  wrangler.toml
assets/: worker.js  wrangler.toml
assets/css/: animations.css  custom.css
assets/js/: analytics.js  download.js  guide.js  history.js  profile.js
css/: animations.css  custom.css  guide.css  themes.css
data/: database.json  games.json  stats.json  top-games.json  trending.json
ghostlua-shield/: Cargo.toml
ghostlua-shield/src/: lib.rs
js/: download.js  guide.js  main.js  notifications.js  profile.js  search.js  tiers.js  ui.js  welcome.js
