[package]
name = "ghostlua-shield"
version = "2.0.0"
edition = "2021"
description = "GhostLua WASM protection layer — HMAC tokens, promo validation, fingerprinting"
repository = "https://github.com/ghostlua/ghostlua"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys        = "0.3"

[profile.release]
# Optimise for size (smallest WASM bundle) with full link-time optimisation.
opt-level     = "s"   # size over speed
lto           = true  # whole-program link-time optimisation
strip         = true  # strip debug symbols from the WASM binary
codegen-units = 1     # single CGU for maximum inlining / dead-code elimination
panic         = "abort" # abort on panic instead of unwind (saves ~10 kB)

[profile.dev]
# Faster iteration during development
opt-level = 0
debug     = true
